attempt two to fix break in website.

--- a/styles/main.css
+++ b/styles/main.css
@@ -1,7 +1,4 @@
-
 h2, h3, h4, h5, h6 {
-
-h2, h3, h4, h5 {
 	font-family: Oswald, "Helvetica Neue", Arial, sans-serif;
 }
 
@@ -21,30 +18,29 @@ ul {
 	font-family: Raleway, "Helvetica Neue" Arial, sans-serif;
 	font-size: 3em;
 	line-height: 1.275em;
-	font-family: Raleway, "Helvetica Neue", Helvetica, sans-serif;
-    color: #333;
+	color: #333;
 }
 
 #sarah {
-        margin-top: 4em;
-        display: inline-block;
+	margin-top: 4em;
+	display: inline-block;
 }
 
 h2 {
-        font-size: 1.5em;
-        line-height: 1.5em;
-        font-family: "Open Sans";
-        font-weight: 300;
-        color: #333;
+	font-size: 1.5em;
+	line-height: 1.5em;
+	font-family: "Open Sans";
+	font-weight: 300;
+	color: #333;
 }
 
 .menu h2 {
-        font-weight: 300;
+	font-weight: 300;
 }
 
 .red {
-        color: #ff00bf;
-        font-weight: 500;
+	color: #ff00bf;
+	font-weight: 500;
 }
 
 .menu ul {
@@ -69,7 +65,7 @@ hr {
 .top {
 	height: 10em;
 	margin-bottom: 3em;
-        position: relative;
+	position: relative;
 }
 
 .menu {
@@ -81,7 +77,7 @@ hr {
 	color: #999;
 	padding-right: .75em;
 	padding-left: .75em;
-        font-size: 1em;
+	font-size: 1em;
 }
 
 .menu a:hover {
@@ -90,23 +86,23 @@ hr {
 
 /* icons */
 .icon {
-        display: inline-block;
-        position: absolute;
-        width: 32px;
-        height: 32px;
-        top: 2em;
+	display: inline-block;
+	position: absolute;
+	width: 32px;
+	height: 32px;
+	top: 2em;
 }
 
 .twitter {
-        background: url(../images/icon/twitter_256px.png) center center no-repeat;
-        background-size: 100%;
-        right: 2em;
+	background: url(../images/icon/twitter_256px.png) center center no-repeat;
+	background-size: 100%;
+	right: 2em;
 }
 
 .github {
-        background: url(../images/icon/github_64px.png) center center no-repeat;
-        background-size: 100%;
-        right: 5.25em;
+	background: url(../images/icon/github_64px.png) center center no-repeat;
+	background-size: 100%;
+	right: 5.25em;
 }
 
 .projects > .project:last-child {
@@ -181,7 +177,7 @@ hr {
 
 .project-link > .image-wrap {
 	position: static;
-        height: 70%;
+	height: 70%;
 }
 
 .project-image {
@@ -189,24 +185,24 @@ hr {
 }
 
 .pattern-cover {
-        background: url(../patterns/crosses/crosses.png) repeat;
+	background: url(../patterns/crosses/crosses.png) repeat;
 	transition: all 400ms;
-        opacity: 0;
+	opacity: 0;
 }
 
 .project-link:hover > .pattern-cover {
-        opacity: 0.5;
+	opacity: 0.5;
 }
 
 
 /* article page styling */
 #article-content > .column {
-        margin-bottom: 5em;
+	margin-bottom: 5em;
 }
 
 #article-content img {
-        width: 100%;
-        padding: 1.25em 0.5em 2.5em;
+	width: 100%;
+	padding: 1.25em 0.5em 2.5em;
 }
 
 #resume-content a,
@@ -216,11 +212,11 @@ hr {
 }
 
 #resume-content ul {
-        list-style: disc;
+	list-style: disc;
 }
 
 #resume-content li {
-        display: list-item;
+	display: list-item;
 }
 
 
